Update code block section
Re-add border-left and change color to #FAFAFA

--- a/css/main.css
+++ b/css/main.css
@@ -675,6 +675,7 @@ pre.highlight, .highlight > pre, td.code pre {
   background-color: #FAFAFA;
   background-size: 3em 3em;
   background-position: 0px 10px;
+  border-left: 7px solid #FAFAFA;
 }
 code table, code table td, code table th, code table tbody, code table tr,
 td.gutter pre {
