--- a/css/main.css
+++ b/css/main.css
@@ -673,8 +673,6 @@ pre code {
 }
 pre.highlight, .highlight > pre, td.code pre {
   background-color: #FAFAFA;
-  background-image: linear-gradient(#F9F9F9 50%, #FDFDFD 50%);
-  background-repeat: repeat;
   background-size: 3em 3em;
   background-position: 0px 10px;
   border-left: 7px solid #444;
@@ -686,7 +684,7 @@ td.gutter pre {
   background-color: #fff;
 }
 .highlight > pre {
-  padding: 0;
+  padding: 7px;
 }
 td.code pre {
   border-width: 0 0 0 2px;
